--- a/index.html
+++ b/index.html
@@ -250,10 +250,32 @@ const contractABI = [
 ]; // Add your contract ABI here  
 const usdcAddress = "0x2791Bca1f2de4661ED88A30C99A7a9449Aa84174";  
 const tokens = {  
-  WETH: "0x7ceB23fD6bC0adD59E62ac25578270cFf1b9f619",  
-  USDT: "0xc2132D05D31c914a87C6611C10748AEb04B58e8F",  
-  UNI: "0xb33EaAd8d922B1083446DC23f610c2567fB5180f"  
-};  
+      WETH: "0x7ceB23fD6bC0adD59E62ac25578270cFf1b9f619",
+      MATIC: "0x0000000000000000000000000000000000001010", 
+      QUICK: "0x831753DD7087CaC61aB5644b308642cc1c33Dc13",
+      SUSHI: "0x0b3F868E0BE5597D5DB7fEB59E1CADBb0fdDa50a",
+      BAL: "0x9a71012b13ca4d3d0cdc72a177df3ef03b0e76a3",
+      CRV: "0x172370d5cd63279efa6d502dab29171933a610af",
+      LINK: "0x53e0bca35ec356bd5dddfebbd1fc0fd03fabad39",
+      RNDR: "0x61299774020da444af134c82fa83e3810b309991",
+      GRT: "0x5fe2b58c013d7601147dcd3d5d4b760064b78666",
+      GALA: "0x8efE8C2410f4E1e8f2E4eF29334A8A17a6D1802C",
+      MANA: "0xa1ea349f4e9dcB27E6fE03A26Be04aafD3A4FdBB",
+      WOO: "0x1B815d120B3e0FfB3E5c3c3bE505dD226dF3bF1A",
+      SHIB: "0x6f8A06447ff6fcf75d803135a7de15ce88c1d4ec",
+      XRP: "0xA4fE0dDcBe6A5bC0bE360bAb93d3B42F70d7Aef2", 
+      FRAX: "0x45c32fa6df82ead1e2ef74d17b76547eddfaff89",
+      APE: "0x4d224452801ACEd8B2F0aebE155379bb5D594381",
+      BONE: "0xAD37e3433EBde20E5fBf531e6C7dA1655c60Bb8E",
+      OS:  "0xD3A691C852CDB01E281545A27064741F0B7f6825",
+      SHIKIGON: "0x3F0fB6e42D160A8DEF49fE68b8eF4D8a5B7AB119",
+      THE7: "0x045F7Ffdcc8334e78316a2c1164EFb2e5f3815d5",
+      BETA: "0x0AfAAbCAd8815B32bF2B64e0Dc5E1df2f1454CDE",
+      FREE: "0xE1ae4d4A3A2200AE5ac06E50BCA0DD7E52A19238",
+      WBTC: "0x1bfd67037b42cf73acf2047067bd4f2c47d9bfd6",  
+      UNI: "0xb33EaAd8d922B1083446DC23f610c2567fB5180f"	,
+      USDT: "0xc2132D05D31c914a87C6611C10748AEb04B58e8F"  
+      };  
 
 const routers = {  
   QuickSwap: "0xa5E0829CaCEd8fFDD4De3c43696c57F7D7A678ff",  
